--- a/Atividade - L.M/site/css/style.css
+++ b/Atividade - L.M/site/css/style.css
@@ -2,7 +2,7 @@
 
 html {
   color: darkslategrey;
-  background-color: white;
+  background-color: black;
   font-family: arial, sans-serif;
   font-size: 17px;
 }
